[gd_scene load_steps=5 format=2]

[ext_resource path="res://caster.png" type="Texture" id=1]
[ext_resource path="res://blocker.gd" type="Script" id=2]

[sub_resource type="OccluderPolygon2D" id=1]
polygon = PoolVector2Array( -15.913, -15.9738, 15.9079, -16.0785, 15.6986, 15.847, -16.1223, 15.9517 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 15.9773, 15.9413 )

[node name="blocker" type="Node2D" groups=[
"blocker",
]]
script = ExtResource( 2 )

[node name="ShadowCaster1" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Occluder" type="LightOccluder2D" parent="ShadowCaster1"]
occluder = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="ShadowCaster1" groups=[
"blocker",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShadowCaster1/Area2D"]
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.416077, -0.277313 )
scale = Vector2( 1.54091, 1.4993 )

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true
[connection signal="area_entered" from="ShadowCaster1/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="ShadowCaster1/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
